--- a/src/partials/components/sidebar/index.pug
+++ b/src/partials/components/sidebar/index.pug
@@ -62,6 +62,10 @@ aside.left-side.sidebar-offcanvas
                         router-link(to='/admin/requests/completed')
                             i.fa.fa-angle-double-right
                             |  Completed
+                    li
+                        router-link(to='/admin/requests/canceled')
+                            i.fa.fa-angle-double-right
+                            |  Canceled
             li.treeview
                 a(href='#')
                     i.fa.fa-money
